Perkin-UAT/force-app/main/default/objects/BD_Org_Limit_Check__mdt/fields/BD_Error_Threshold__c.field-meta.xml
<CustomField>
    <fullName>BD_Error_Threshold__c</fullName>
    <defaultValue>0.75</defaultValue>
    <description>The percent used that will trigger an ERROR email.</description>
    <inlineHelpText>The percent used that will trigger an ERROR email.</inlineHelpText>
    <label>Error Threshold</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>