Perkin-UAT/force-app/main/default/objects/BD_Org_Limit_Check__mdt/fields/BD_Info_Notification_List__c.field-meta.xml
<CustomField>
    <fullName>BD_Info_Notification_List__c</fullName>
    <description>The list of email addresses to send the alert to separated by either comma or semi-colon.</description>
    <inlineHelpText>The list of email addresses to send the alert to separated by either comma or semi-colon.</inlineHelpText>
    <label>Info Notification List</label>
    <length>255</length>
    <type>Text</type>
</CustomField>