Perkin-UAT/force-app/main/default/objects/BD_Org_Limit_Check__mdt/fields/BD_Reply_To_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>BD_Reply_To_Email_Address__c</fullName>
    <defaultValue>&quot;sfdc@perkinelmer.com&quot;</defaultValue>
    <description>The reply to email address to use in the notification email.</description>
    <inlineHelpText>The reply to email address to use in the notification email.</inlineHelpText>
    <label>Reply To Email Address</label>
    <required>true</required>
    <type>Email</type>
</CustomField>