Perkin-UAT/force-app/main/default/objects/BD_Org_Limit_Check__mdt/fields/BD_Warning_Threshold__c.field-meta.xml
<CustomField>
    <fullName>BD_Warning_Threshold__c</fullName>
    <description>The percent used that will trigger a WARNING email. Leave blank to disable this alert threshold.</description>
    <inlineHelpText>The percent used that will trigger a WARNING email. Leave blank to disable this alert threshold.</inlineHelpText>
    <label>Warning Threshold</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>