Perkin-UAT/force-app/main/default/objects/BD_Org_Limit_Check__mdt/listViews/All_Limt_Alerts.listView-meta.xml
<ListView>
    <fullName>All_Limt_Alerts</fullName>
    <columns>MasterLabel</columns>
    <columns>BD_Limit_Name__c</columns>
    <columns>BD_Active__c</columns>
    <columns>BD_Info_Threshold__c</columns>
    <columns>BD_Warning_Threshold__c</columns>
    <columns>BD_Error_Threshold__c</columns>
    <columns>BD_Send_As_Org_Email_Address__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Limt Alerts</label>
    <language>en_US</language>
</ListView>